# data-harness

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SKILL.md  SOUL.md  admin.py  capabilities.py  capabilities_cli.py  check_skill.py  daemon.py  deadlines.py  helpers.py  install.md  models.py  models_cli.py  pyproject.toml  run.py
domain-skills/: README.md
domain-skills/_template/: SKILL.md
domain-skills/_template/fixtures/case_001/: README.md  expected.json
domain-skills/adem/: SKILL.md
domain-skills/adem/fixtures/case_001/: README.md  expected.json  floor.json
domain-skills/dhs/: SKILL.md  skill.py
domain-skills/dhs/fixtures/case_001/: README.md  expected.json  floor.json
domain-skills/edgar/: SKILL.md  skill.py
domain-skills/edgar/fixtures/case_001/: README.md  expected.json  floor.json
domain-skills/faers/: SKILL.md  skill.py
domain-skills/gfw/: SKILL.md  skill.py
domain-skills/snapshot-serengeti/: SKILL.md  skill.py
domain-skills/soccernet/: SKILL.md  skill.py
domain-skills/tess/: SKILL.md  skill.py
domain-skills/usaspending/: SKILL.md  skill.py
domain-skills/uspto/: SKILL.md  skill.py
domain-skills/vesuvius/: SKILL.md  skill.py
domain-skills/ztf/: SKILL.md  skill.py
interaction-skills/: README.md
interaction-skills/assert/: SKILL.md  skill.py
interaction-skills/calibrate/: SKILL.md  skill.py
interaction-skills/correct/: SKILL.md  skill.py
interaction-skills/disaggregate/: SKILL.md  skill.py
interaction-skills/distribution/: SKILL.md  skill.py
interaction-skills/drift/: SKILL.md  skill.py
interaction-skills/glance/: SKILL.md  skill.py
interaction-skills/grain/: SKILL.md  skill.py
interaction-skills/join/: SKILL.md  skill.py
interaction-skills/leakage/: SKILL.md  skill.py
interaction-skills/overfit-one-batch/: SKILL.md  skill.py
interaction-skills/placebo/: SKILL.md  skill.py
interaction-skills/plan/: SKILL.md  skill.py
interaction-skills/reflect/: SKILL.md  skill.py
interaction-skills/saturation/: SKILL.md  skill.py
interaction-skills/schema/: SKILL.md  skill.py
interaction-skills/split/: SKILL.md  skill.py
interaction-skills/uncertainty/: SKILL.md  skill.py
meta-skills/: README.md
meta-skills/interview/: SKILL.md
profiles/: base.toml  ci-runner.toml  hosted-api-only.toml  laptop-cpu.toml  laptop-gpu.toml  retained-weights.toml  server-1gpu.toml  server-multi.toml  tiny.toml  workstation.toml
(+142 files in other folders)
